test/tasty/neg/src-3/AlphaAnnot.scala
package tastytest

object AlphaAnnot {

  @annotation.alpha("doubleplus") def ++ : Unit = println("++")

  def foo = 23

}
